client/styles/master.css
/* ... */
@media only screen and (max-width: 575.5px) {
    .x-small-width-300{
        max-width: 300px;
    }
}
/***** TRIANGLE SIZES *****/
.triangle-1-1-sqrt2 {
    width: 100%;
    max-width: 150px;
}
.triangle-rotate-1-2-sqrt3 {
    width: 100%;
    max-width: 215px;
}

/***** GROUP HEIGHTS *****/
#post .function-group-carrier {
    margin-bottom: -18px;
}
#post .function-group:not(:last-child) {
    margin-bottom:15px;
}

.height-18 .group-item { height:18px; }
.height-18 .function-group:last-child { margin-bottom:26px; }

.height-26 .group-item { height:26px; }
.height-26 .function-group:last-child { margin-bottom:26px; }

.height-32 .group-item { height:32px; }
.height-32 .function-group:last-child { margin-bottom:20px; }

.diagram-by-example .function-group:last-child { margin-bottom:0 !important; }

/***** SPACING AGAIN *****/
.no-vertical-margin > .MJXc-display,
.caption-text > .MJXc-display {
    margin-top:0 !important;
    margin-bottom:0 !important;
}

.latex-vertical-margin-small-top-only > .MJXc-display {
    margin-top:4px !important;
    margin-bottom:0 !important;
}
.latex-vertical-margin-medium-top-only > .MJXc-display {
    margin-top:16px !important;
    margin-bottom:0 !important;
}
#solutions .problem .function-group-carrier,
#solutions .problem .nested-list {
    margin-top: 26px;
}

.caption-text {
    display:inline-block;
    margin-top:5px;
}

.li-medium-bottom-margin li:not(:last-child) {
    margin-bottom: 1em;
}

.graph,
.graph-con-no-image ul {
    margin-top: 1em;
}
#post .graph {
    margin-top:0;
}
.caption-after-graph {
    /* for when flexbox doesnt work https://css-tricks.com/centering-css-complete-guide/ */
    display: flex;
    justify-content: center;
    align-items: center;
}
.height-100 {
    height: 100px;
}

